objects/Invoice_Review__c.object
<CustomObject>
    <fields>
        <fullName>Reviewer_Error__c</fullName>
        <label>Reviewer Error</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incorrect Product, Quantity, Unit Price</fullName>
                </value>
                <value>
                    <fullName>Incorrect scheduling</fullName>
                </value>
                <value>
                    <fullName>Incorrect Billing Note</fullName>
                </value>
                <value>
                    <fullName>SF-EBS Integration (Technical Issue)</fullName>
                </value>
                <value>
                    <fullName>Incorrect Ship to address</fullName>
                </value>
                <value>
                    <fullName>Incorrect Billing POC</fullName>
                </value>
                <value>
                    <fullName>Incorrect Bill to address</fullName>
                </value>
                <value>
                    <fullName>Credit not applied</fullName>
                </value>
                <value>
                    <fullName>Document not attached in email</fullName>
                </value>
                <value>
                    <fullName>Incorrect Contract#</fullName>
                </value>
                <value>
                    <fullName>Start Date incorrect</fullName>
                </value>
                <value>
                    <fullName>Unit price not hidden</fullName>
                </value>
                <value>
                    <fullName>Net Term Incorrect</fullName>
                </value>
                <value>
                    <fullName>Do not send (EBS)</fullName>
                </value>
                <value>
                    <fullName>Incorrect Billing Header</fullName>
                </value>
                <value>
                    <fullName>Incorrect Billing Schedule</fullName>
                </value>
                <value>
                    <fullName>Bill to company Name</fullName>
                </value>
                <value>
                    <fullName>Invoicing Instrucions not Followed</fullName>
                </value>
                <value>
                    <fullName>Invoice to reflect as per contract copy</fullName>
                </value>
                <value>
                    <fullName>Invoice not uploaded</fullName>
                </value>
                <value>
                    <fullName>PO Incorrect</fullName>
                </value>
                <value>
                    <fullName>Federal Tax id not updated</fullName>
                </value>
                <value>
                    <fullName>Sales approval not attached</fullName>
                </value>
                <value>
                    <fullName>E-mail Draft incorrect</fullName>
                </value>
                <value>
                    <fullName>Invoicing - Not send to EBS</fullName>
                </value>
                <value>
                    <fullName>Do Not Send Invoice (OrderType Override)</fullName>
                </value>
                <value>
                    <fullName># of Events - Incorrect</fullName>
                    <isActive>false</isActive>
                    <label># of Events - Incorrect</label>
                </value>
                <value>
                    <fullName># of Leads Purchased - Incorrect</fullName>
                    <isActive>false</isActive>
                    <label># of Leads Purchased - Incorrect</label>
                </value>
                <value>
                    <fullName># of Mobile Apps - Incorrect</fullName>
                    <isActive>false</isActive>
                    <label># of Mobile Apps - Incorrect</label>
                </value>
                <value>
                    <fullName># of Mobile Events - Incorrect</fullName>
                    <isActive>false</isActive>
                    <label># of Mobile Events - Incorrect</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SC_Invoice__c</fullName>
        <label>SC#/Invoice#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Required__c</fullName>
        <label>Time Required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upload_Process_Completed_Date_Time__c</fullName>
        <label>Upload Process Completed Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Upload_Process_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upload Process Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Write_off_form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Write off form</label>
        <referenceTo>WriteOff__c</referenceTo>
        <relationshipLabel>Invoice Reviews</relationshipLabel>
        <relationshipName>Invoice_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Yes_Marked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Yes Marked</label>
        <type>Checkbox</type>
    </fields>
    <label>Invoice Review</label>
    <nameField>
        <displayFormat>IRN-{00000}</displayFormat>
        <label>Invoice Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>Contract_Processor_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Invoice_Review_Ok__c , 'No(Implementation Error)'),
ISBLANK( TEXT(Contract_Processor__c) ),
NOT(CONTAINS( $User.Username, 'deployment' ))
)</errorConditionFormula>
        <errorDisplayField>Contract_Processor__c</errorDisplayField>
        <errorMessage>Please update Contract Processor</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Err_Cat_Source_QA_Comments</fullName>
        <active>true</active>
        <description>#12006100</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(Error_Category__c )),

OR(ISBLANK(TEXT(Error_Source__c)) , ISBLANK(Invoicing_QA_Comments__c) ),

NOT(CONTAINS( $User.Username, "deploymentuser" ))



)</errorConditionFormula>
        <errorMessage>Error Source and Invoicing QA Comments are required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invoice_Review_Ok_No</fullName>
        <active>true</active>
        <description>#12708762</description>
        <errorConditionFormula>AND( 
ISPICKVAL(Invoice_Review_Ok__c ,"No"), 
ISBLANK(Invoicing_QA_Comments__c), 
ISBLANK(Error_Category__c ),
NOT(CONTAINS( $User.Username ,"deployment"))
)</errorConditionFormula>
        <errorMessage>Please enter Invoice QA Comments and Error Category.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invoice_Sent_Month</fullName>
        <active>true</active>
        <description>#12708762</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK(TEXT(Invoice_Review_Ok__c))), 
ISBLANK(Invoice_sent_month__c ),
NOT(CONTAINS( $User.Username ,"deployment"))
)</errorConditionFormula>
        <errorDisplayField>Invoice_sent_month__c</errorDisplayField>
        <errorMessage>Please enter Invoice Sent Month</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Marking_Yes_after_No</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  NOT(ISBLANK( Invoice_review_Ok_Date_Time__c )),
  ISCHANGED(Invoice_Review_Ok__c),
  ISPICKVAL(Invoice_Review_Ok__c,"Yes"),
  
  Error_Corrected__c != TRUE,
  No_Marked__c = TRUE,

  NOT(CONTAINS( $User.Username,"deployment" ))

)</errorConditionFormula>
        <errorDisplayField>Processor_Review_Ok__c</errorDisplayField>
        <errorMessage>Please mark Process Review Ok as Yes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Upload_Processed_Val</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Invoice_Review_Ok__c , 'Upload to be processed'),

ISPICKVAL( Invoice_Category__c , 'No Print' ),

NOT(CONTAINS( $User.Username, 'deployment' ))
)</errorConditionFormula>
        <errorDisplayField>Invoice_Review_Ok__c</errorDisplayField>
        <errorMessage>Please select correct drop down for Invoice Review Ok?</errorMessage>
    </validationRules>
</CustomObject>